# drf-auth

./: .env-sample  .gitignore  Dockerfile  README.md  REST.http  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
drf_auth/: settings.py  urls.py
duck/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
duck/migrations/: 0001_initial.py  0002_duckmodel_updated_date.py
templates/: base.html  home.html
